Fixed section1 margin mis-alignment

--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,6 @@ img.menu-item {
 }
 
 .ATF-deco {
-    /*border: 1px solid black;*/
     width: 100%;
 
     position: absolute;
@@ -151,7 +150,7 @@ img.menu-item {
 }
 
 .section-1 h2 {
-    margin-top: 40px;
+    margin-top: 140px;
     font-size: 13px;
 
     text-align: center;
@@ -165,7 +164,6 @@ img.menu-item {
     text-align: center;
 }
 .step-image-wrapper {
-    /*text-align: center;*/
 }
 .step-title {
     display: inline-block;
@@ -186,7 +184,6 @@ img.menu-item {
     color: #37CDE9;
 }
 .step-subtitle {
-    border: 1px orange solid;
     display: inline-block;
 
     margin-top: 8px;
